attempt to fix active and focus layout bug when margin-bottom is 0. Still has focus visual bug.

--- a/packages/components/button/_button.scss
+++ b/packages/components/button/_button.scss
@@ -122,7 +122,6 @@ $button-padding-left-right: nhsuk-spacing(3);
   color: $nhsuk-secondary-button-text-color;
   padding-bottom: $button-padding-top-bottom-desktop + calc($button-border-width / 2); // [4]
   padding-top: $button-padding-top-bottom-desktop + calc($button-border-width / 2); // [4]
-  @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-border-width); // [4]
 
   @include mq($until: tablet) {
     padding-bottom: $button-padding-top-bottom-mobile + calc($button-border-width / 2); // [4]
@@ -146,7 +145,13 @@ $button-padding-left-right: nhsuk-spacing(3);
     box-shadow: 0 $button-shadow-size 0 $nhsuk-focus-text-color;
     color: $nhsuk-focus-text-color;
     outline: $nhsuk-focus-width solid transparent;
-    @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-shadow-size); // [4]
+    padding-bottom: $button-padding-top-bottom-desktop + 2px; // [4]
+    padding-top: $button-padding-top-bottom-desktop + 2px; // [4]
+
+    @include mq($until: tablet) {
+      padding-bottom: calc($button-padding-top-bottom-mobile + ($button-border-width)); // [4]
+      padding-top: calc($button-padding-top-bottom-mobile + ($button-border-width)); // [4]
+    }
 
     &:link {
       color: $nhsuk-focus-text-color;
@@ -167,15 +172,7 @@ $button-padding-left-right: nhsuk-spacing(3);
     border-bottom: $button-border-width solid;
     box-shadow: none;
     color: $nhsuk-secondary-button-text-color;
-    padding-bottom: $button-padding-top-bottom-desktop; // [4]
-    padding-top: $button-padding-top-bottom-desktop; // [4]
-    top: $button-shadow-size;
-    @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-shadow-size); // [4]
-
-    @include mq($until: tablet) {
-      padding-bottom: $button-padding-top-bottom-mobile; // [4]
-      padding-top: $button-padding-top-bottom-mobile; // [4]
-    }
+    top: calc($button-shadow-size / 2);
   }
 
   &:active::before {
